<resources>
    <string name="app_name">Food Watch</string>
    <string name="add_meal">Add Meal</string>
    <string name="recipes">Recipes</string>
    <string name="add_reaction">Add Reaction</string>
    <string name="app_subtitle">Allergy Awareness</string>
    <string name="pass_test">Test passed!</string>
    <string name="return_home">Return Home</string>
    <string name="notifications">Notifications</string>
    <string name="notification_description">Notification Description</string>
    <string name="sounds">Sounds</string>
    <string name="sounds_description">Sounds Description</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_description">Dark Mode Description</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_picture_description">Profile Picture Description</string>
    <string name="profile_name">Zachary</string>
    <string name="settings">Settings</string>
    <string-array name="reaction_severity_array">
        <item>Mild</item>
        <item>Medium</item>
        <item>Severe</item>
    </string-array>

    <string-array name="ingredient_array">
        <item>Banana</item>
        <item>Bread</item>
        <item>Dairy</item>
        <item>Olive Oil</item>
        <item>Peanut Butter</item>
        <item>Tree Nuts</item>
        <item>Yogurt</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_reaction">No Reaction</string>
    <string name="mild_reaction">Mild Reaction</string>
    <string name="severe">Severe</string>
    <string name="mild">Mild</string>
    <string name="medium">Medium</string>
    <string name="select_start">Select Start</string>
    <string name="select_end">Select End</string>
</resources>