<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/legendLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="2dp"
            android:background="@color/noReaction" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/no_reaction" />

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="2dp"
            android:background="@color/mildReaction" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/mild" />

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="2dp"
            android:background="@color/mediumReaction" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/medium" />

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="2dp"
            android:background="@color/severeReaction" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/severe" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_start"
        app:layout_constraintEnd_toStartOf="@+id/btn_end"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/legendLayout"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btn_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_start"
        app:layout_constraintTop_toBottomOf="@id/legendLayout"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginTop="12dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reportsRecyclerList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start"
        tools:listitem="@layout/reportlist_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
